{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 2956,
  "lineage": "d3827a94-5985-11c2-b655-9c385f8c3e87",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0014b4df50de1f4ab",
            "association_id": "eipassoc-0936f56d2b2c95b2c",
            "domain": "vpc",
            "id": "eipalloc-0014b4df50de1f4ab",
            "instance": "i-0cba2753d0e18f750",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02e162dc9c50e13aa",
            "private_dns": "ip-10-0-1-48.ec2.internal",
            "private_ip": "10.0.1.48",
            "public_dns": "ec2-3-223-198-250.compute-1.amazonaws.com",
            "public_ip": "3.223.198.250",
            "public_ipv4_pool": "amazon",
            "tags": {
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.ec2_public.aws_iam_instance_profile.this",
            "module.ec2_public.aws_iam_role.this",
            "module.ec2_public.aws_iam_role_policy_attachment.this",
            "module.ec2_public.aws_instance.ignore_ami",
            "module.ec2_public.aws_instance.this",
            "module.ec2_public.aws_spot_instance_request.this",
            "module.ec2_public.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_public.data.aws_partition.current",
            "module.ec2_public.data.aws_ssm_parameter.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:067267145404:loadbalancer/app/SRE-DevOps-stag-alb/9819f58ff1e6b17d",
            "arn_suffix": "app/SRE-DevOps-stag-alb/9819f58ff1e6b17d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "SRE-DevOps-stag-alb-1142870568.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:067267145404:loadbalancer/app/SRE-DevOps-stag-alb/9819f58ff1e6b17d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "SRE-DevOps-stag-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-042ac9c8858539b77",
              "sg-0aab0464001bded37"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-005d615cc612367ae"
              },
              {
                "subnet_id": "subnet-0b19df22e36f20afb"
              }
            ],
            "subnets": [
              "subnet-005d615cc612367ae",
              "subnet-0b19df22e36f20afb"
            ],
            "tags": {
              "Name": "SRE-DevOps-stag-alb",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "SRE-DevOps-stag-alb",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0521a9be9b7c694ac",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:067267145404:listener/app/SRE-DevOps-stag-alb/9819f58ff1e6b17d/205b7cdfd8b01c48",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:067267145404:listener/app/SRE-DevOps-stag-alb/9819f58ff1e6b17d/205b7cdfd8b01c48",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:067267145404:loadbalancer/app/SRE-DevOps-stag-alb/9819f58ff1e6b17d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.this",
            "module.ec2_private_app1.aws_iam_instance_profile.this",
            "module.ec2_private_app1.aws_instance.ignore_ami",
            "module.ec2_private_app1.aws_instance.this",
            "module.ec2_private_app1.aws_spot_instance_request.this",
            "module.ec2_private_app1.data.aws_ssm_parameter.this",
            "module.ec2_private_app2.aws_iam_instance_profile.this",
            "module.ec2_private_app2.aws_instance.ignore_ami",
            "module.ec2_private_app2.aws_instance.this",
            "module.ec2_private_app2.aws_spot_instance_request.this",
            "module.ec2_private_app2.data.aws_ssm_parameter.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:067267145404:listener/app/SRE-DevOps-stag-alb/9819f58ff1e6b17d/c573f3a37cd0e398",
            "certificate_arn": "arn:aws:acm:us-east-1:067267145404:certificate/a7d951d7-ae2e-4cb0-a7fe-e04fcb70e65a",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/html",
                    "message_body": "\u003c!DOCTYPE html\u003e \u003chtml\u003e \u003cbody style='background-color:rgb(53, 157, 174);'\u003e \u003ch2\u003eHi there!\u003c/h2\u003e\u003cbr\u003e\u003ch1\u003e Welcome to DeveshDevOps\u003c/h1\u003e \u003cp\u003eto go to APP1 go to  =\u003e \u003ca href='/app1'\u003e deveshdevops.com/app1\u003c/a\u003e \u003cbr\u003e  for APP2 go to =\u003e  \u003ca href='/app2'\u003e deveshdevops.com/app2\u003c/a\u003e\u003c/p\u003e \u003cbr\u003e\u003c/body\u003e [...]
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:067267145404:listener/app/SRE-DevOps-stag-alb/9819f58ff1e6b17d/c573f3a37cd0e398",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:067267145404:loadbalancer/app/SRE-DevOps-stag-alb/9819f58ff1e6b17d",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_route53_zone.mydomain",
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.acm.aws_route53_record.validation",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.this",
            "module.ec2_private_app1.aws_iam_instance_profile.this",
            "module.ec2_private_app1.aws_instance.ignore_ami",
            "module.ec2_private_app1.aws_instance.this",
            "module.ec2_private_app1.aws_spot_instance_request.this",
            "module.ec2_private_app1.data.aws_ssm_parameter.this",
            "module.ec2_private_app2.aws_iam_instance_profile.this",
            "module.ec2_private_app2.aws_instance.ignore_ami",
            "module.ec2_private_app2.aws_instance.this",
            "module.ec2_private_app2.aws_spot_instance_request.this",
            "module.ec2_private_app2.data.aws_ssm_parameter.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "https_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:067267145404:targetgroup/app1-2023081315564835120000000c/7bff2518266d5e5e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:067267145404:listener-rule/app/SRE-DevOps-stag-alb/9819f58ff1e6b17d/c573f3a37cd0e398/92d43f65ec8b6082",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/app1*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:067267145404:listener-rule/app/SRE-DevOps-stag-alb/9819f58ff1e6b17d/c573f3a37cd0e398/92d43f65ec8b6082",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:067267145404:listener/app/SRE-DevOps-stag-alb/9819f58ff1e6b17d/c573f3a37cd0e398",
            "priority": 1,
            "tags": {
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_route53_zone.mydomain",
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.acm.aws_route53_record.validation",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.frontend_https",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.this",
            "module.ec2_private_app1.aws_iam_instance_profile.this",
            "module.ec2_private_app1.aws_instance.ignore_ami",
            "module.ec2_private_app1.aws_instance.this",
            "module.ec2_private_app1.aws_spot_instance_request.this",
            "module.ec2_private_app1.data.aws_ssm_parameter.this",
            "module.ec2_private_app2.aws_iam_instance_profile.this",
            "module.ec2_private_app2.aws_instance.ignore_ami",
            "module.ec2_private_app2.aws_instance.this",
            "module.ec2_private_app2.aws_spot_instance_request.this",
            "module.ec2_private_app2.data.aws_ssm_parameter.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:067267145404:targetgroup/app2-2023081315564835120000000d/321877efaa68adbf",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:067267145404:listener-rule/app/SRE-DevOps-stag-alb/9819f58ff1e6b17d/c573f3a37cd0e398/e675fa1a02330f73",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/app2*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:067267145404:listener-rule/app/SRE-DevOps-stag-alb/9819f58ff1e6b17d/c573f3a37cd0e398/e675fa1a02330f73",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:067267145404:listener/app/SRE-DevOps-stag-alb/9819f58ff1e6b17d/c573f3a37cd0e398",
            "priority": 2,
            "tags": {
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_route53_zone.mydomain",
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.acm.aws_route53_record.validation",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.frontend_https",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.this",
            "module.ec2_private_app1.aws_iam_instance_profile.this",
            "module.ec2_private_app1.aws_instance.ignore_ami",
            "module.ec2_private_app1.aws_instance.this",
            "module.ec2_private_app1.aws_spot_instance_request.this",
            "module.ec2_private_app1.data.aws_ssm_parameter.this",
            "module.ec2_private_app2.aws_iam_instance_profile.this",
            "module.ec2_private_app2.aws_instance.ignore_ami",
            "module.ec2_private_app2.aws_instance.this",
            "module.ec2_private_app2.aws_spot_instance_request.this",
            "module.ec2_private_app2.data.aws_ssm_parameter.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:067267145404:targetgroup/app1-2023081315564835120000000c/7bff2518266d5e5e",
            "arn_suffix": "targetgroup/app1-2023081315564835120000000c/7bff2518266d5e5e",
            "connection_termination": false,
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/app1/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:067267145404:targetgroup/app1-2023081315564835120000000c/7bff2518266d5e5e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app1-2023081315564835120000000c",
            "name_prefix": "app1-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "app1-",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "app1-",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0521a9be9b7c694ac"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.ec2_private_app1.aws_iam_instance_profile.this",
            "module.ec2_private_app1.aws_instance.ignore_ami",
            "module.ec2_private_app1.aws_instance.this",
            "module.ec2_private_app1.aws_spot_instance_request.this",
            "module.ec2_private_app1.data.aws_ssm_parameter.this",
            "module.ec2_private_app2.aws_iam_instance_profile.this",
            "module.ec2_private_app2.aws_instance.ignore_ami",
            "module.ec2_private_app2.aws_instance.this",
            "module.ec2_private_app2.aws_spot_instance_request.this",
            "module.ec2_private_app2.data.aws_ssm_parameter.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:067267145404:targetgroup/app2-2023081315564835120000000d/321877efaa68adbf",
            "arn_suffix": "targetgroup/app2-2023081315564835120000000d/321877efaa68adbf",
            "connection_termination": false,
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/app2/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:067267145404:targetgroup/app2-2023081315564835120000000d/321877efaa68adbf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app2-2023081315564835120000000d",
            "name_prefix": "app2-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "app2-",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "app2-",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0521a9be9b7c694ac"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.ec2_private_app1.aws_iam_instance_profile.this",
            "module.ec2_private_app1.aws_instance.ignore_ami",
            "module.ec2_private_app1.aws_instance.this",
            "module.ec2_private_app1.aws_spot_instance_request.this",
            "module.ec2_private_app1.data.aws_ssm_parameter.this",
            "module.ec2_private_app2.aws_iam_instance_profile.this",
            "module.ec2_private_app2.aws_instance.ignore_ami",
            "module.ec2_private_app2.aws_instance.this",
            "module.ec2_private_app2.aws_spot_instance_request.this",
            "module.ec2_private_app2.data.aws_ssm_parameter.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.my_app1_vm1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:067267145404:targetgroup/app1-2023081315564835120000000c/7bff2518266d5e5e-2023081315565233710000000e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:067267145404:targetgroup/app1-2023081315564835120000000c/7bff2518266d5e5e",
            "target_id": "i-0911a72806a6f1592"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.alb.aws_lambda_permission.lb",
            "module.alb.aws_lb_target_group.main",
            "module.ec2_private_app1.aws_iam_instance_profile.this",
            "module.ec2_private_app1.aws_instance.ignore_ami",
            "module.ec2_private_app1.aws_instance.this",
            "module.ec2_private_app1.aws_spot_instance_request.this",
            "module.ec2_private_app1.data.aws_ssm_parameter.this",
            "module.ec2_private_app2.aws_iam_instance_profile.this",
            "module.ec2_private_app2.aws_instance.ignore_ami",
            "module.ec2_private_app2.aws_instance.this",
            "module.ec2_private_app2.aws_spot_instance_request.this",
            "module.ec2_private_app2.data.aws_ssm_parameter.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        },
        {
          "index_key": "0.my_app1_vm2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:067267145404:targetgroup/app1-2023081315564835120000000c/7bff2518266d5e5e-2023081315565237920000000f",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:067267145404:targetgroup/app1-2023081315564835120000000c/7bff2518266d5e5e",
            "target_id": "i-000c98886bec4f321"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.alb.aws_lambda_permission.lb",
            "module.alb.aws_lb_target_group.main",
            "module.ec2_private_app1.aws_iam_instance_profile.this",
            "module.ec2_private_app1.aws_instance.ignore_ami",
            "module.ec2_private_app1.aws_instance.this",
            "module.ec2_private_app1.aws_spot_instance_request.this",
            "module.ec2_private_app1.data.aws_ssm_parameter.this",
            "module.ec2_private_app2.aws_iam_instance_profile.this",
            "module.ec2_private_app2.aws_instance.ignore_ami",
            "module.ec2_private_app2.aws_instance.this",
            "module.ec2_private_app2.aws_spot_instance_request.this",
            "module.ec2_private_app2.data.aws_ssm_parameter.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        },
        {
          "index_key": "1.my_app2_vm1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:067267145404:targetgroup/app2-2023081315564835120000000d/321877efaa68adbf-20230813155652395900000010",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:067267145404:targetgroup/app2-2023081315564835120000000d/321877efaa68adbf",
            "target_id": "i-07cea87612cf7f3bf"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.alb.aws_lambda_permission.lb",
            "module.alb.aws_lb_target_group.main",
            "module.ec2_private_app1.aws_iam_instance_profile.this",
            "module.ec2_private_app1.aws_instance.ignore_ami",
            "module.ec2_private_app1.aws_instance.this",
            "module.ec2_private_app1.aws_spot_instance_request.this",
            "module.ec2_private_app1.data.aws_ssm_parameter.this",
            "module.ec2_private_app2.aws_iam_instance_profile.this",
            "module.ec2_private_app2.aws_instance.ignore_ami",
            "module.ec2_private_app2.aws_instance.this",
            "module.ec2_private_app2.aws_spot_instance_request.this",
            "module.ec2_private_app2.data.aws_ssm_parameter.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        },
        {
          "index_key": "1.my_app2_vm2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:067267145404:targetgroup/app2-2023081315564835120000000d/321877efaa68adbf-20230813155652486600000011",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:067267145404:targetgroup/app2-2023081315564835120000000d/321877efaa68adbf",
            "target_id": "i-01f3eedc62087e15b"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.alb.aws_lambda_permission.lb",
            "module.alb.aws_lb_target_group.main",
            "module.ec2_private_app1.aws_iam_instance_profile.this",
            "module.ec2_private_app1.aws_instance.ignore_ami",
            "module.ec2_private_app1.aws_instance.this",
            "module.ec2_private_app1.aws_spot_instance_request.this",
            "module.ec2_private_app1.data.aws_ssm_parameter.this",
            "module.ec2_private_app2.aws_iam_instance_profile.this",
            "module.ec2_private_app2.aws_instance.ignore_ami",
            "module.ec2_private_app2.aws_instance.this",
            "module.ec2_private_app2.aws_spot_instance_request.this",
            "module.ec2_private_app2.data.aws_ssm_parameter.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067267145404:security-group/sg-042ac9c8858539b77",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-042ac9c8858539b77",
            "ingress": [],
            "name": "SRE-DevOps-stag-alb-20230813155429058600000005",
            "name_prefix": "SRE-DevOps-stag-alb-",
            "owner_id": "067267145404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SRE-DevOps-stag-alb",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "SRE-DevOps-stag-alb",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0521a9be9b7c694ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_private_app1[\"one\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09748abeb7370d1bc",
            "arn": "arn:aws:ec2:us-east-1:067267145404:instance/i-0911a72806a6f1592",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0911a72806a6f1592",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linuxPEMfile",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0623e20b9fc193c31",
            "private_dns": "ip-10-0-101-220.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0793c0b7f9268eb7a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0837a7b945ace3648",
            "tags": {
              "Name": "SRE-DevOps-stag-private-one-app1",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "SRE-DevOps-stag-private-one-app1",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "SRE-DevOps-stag-private-one-app1"
            },
            "vpc_security_group_ids": [
              "sg-0f43972ff10a301b8"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.ec2_private_app1.aws_iam_instance_profile.this",
            "module.ec2_private_app1.data.aws_ssm_parameter.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_private_app1[\"two\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09748abeb7370d1bc",
            "arn": "arn:aws:ec2:us-east-1:067267145404:instance/i-000c98886bec4f321",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-000c98886bec4f321",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "linuxPEMfile",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04a14b77e5db07a4f",
            "private_dns": "ip-10-0-102-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.102.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06b202c5b3676267f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09a7d1f18449f7e99",
            "tags": {
              "Name": "SRE-DevOps-stag-private-two-app1",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "SRE-DevOps-stag-private-two-app1",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "SRE-DevOps-stag-private-two-app1"
            },
            "vpc_security_group_ids": [
              "sg-0f43972ff10a301b8"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.ec2_private_app1.aws_iam_instance_profile.this",
            "module.ec2_private_app1.data.aws_ssm_parameter.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_private_app2[\"one\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09748abeb7370d1bc",
            "arn": "arn:aws:ec2:us-east-1:067267145404:instance/i-07cea87612cf7f3bf",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07cea87612cf7f3bf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linuxPEMfile",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-070f72dd58c273f52",
            "private_dns": "ip-10-0-101-213.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03c487d6dc5225f9a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0837a7b945ace3648",
            "tags": {
              "Name": "SRE-DevOps-stag-private-one-app2",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "SRE-DevOps-stag-private-one-app2",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "SRE-DevOps-stag-private-one-app2"
            },
            "vpc_security_group_ids": [
              "sg-0f43972ff10a301b8"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.ec2_private_app2.aws_iam_instance_profile.this",
            "module.ec2_private_app2.data.aws_ssm_parameter.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_private_app2[\"two\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09748abeb7370d1bc",
            "arn": "arn:aws:ec2:us-east-1:067267145404:instance/i-01f3eedc62087e15b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01f3eedc62087e15b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "linuxPEMfile",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00a4bc374da22984a",
            "private_dns": "ip-10-0-102-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.102.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03f18f884b80ccf2f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09a7d1f18449f7e99",
            "tags": {
              "Name": "SRE-DevOps-stag-private-two-app2",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "SRE-DevOps-stag-private-two-app2",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "SRE-DevOps-stag-private-two-app2"
            },
            "vpc_security_group_ids": [
              "sg-0f43972ff10a301b8"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.ec2_private_app2.aws_iam_instance_profile.this",
            "module.ec2_private_app2.data.aws_ssm_parameter.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09748abeb7370d1bc",
            "arn": "arn:aws:ec2:us-east-1:067267145404:instance/i-0cba2753d0e18f750",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cba2753d0e18f750",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linuxPEMfile",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02e162dc9c50e13aa",
            "private_dns": "ip-10-0-1-48.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a874905853fd0d9d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005d615cc612367ae",
            "tags": {
              "Name": "stag-BastionHost",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "stag-BastionHost",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "stag-BastionHost"
            },
            "vpc_security_group_ids": [
              "sg-0d6ca18fd3ab6c7a1"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.ec2_public.aws_iam_instance_profile.this",
            "module.ec2_public.data.aws_ssm_parameter.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067267145404:security-group/sg-0aab0464001bded37",
            "description": "Security Group with HTTP port open for enire internet, egress ports are all world open",
            "egress": [],
            "id": "sg-0aab0464001bded37",
            "ingress": [],
            "name": "loadbalancer_sg-20230813155428205500000004",
            "name_prefix": "loadbalancer_sg-",
            "owner_id": "067267145404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "loadbalancer_sg",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "loadbalancer_sg",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0521a9be9b7c694ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-26148926",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0aab0464001bded37",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-758596081",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aab0464001bded37",
            "security_group_rule_id": "sgr-004a5181994101708",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1436553665",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aab0464001bded37",
            "security_group_rule_id": "sgr-0d0cc605cd8270846",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow port 81 from internet using custom protocol Security Group Ingress rule",
            "from_port": 81,
            "id": "sgrule-1029816425",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aab0464001bded37",
            "security_group_rule_id": "sgr-03e034f58f58df19d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 81,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067267145404:security-group/sg-0f43972ff10a301b8",
            "description": "Security Group with http \u0026 SSH port open for enire vpc block(10.0.0.0/16), egress ports are all world open",
            "egress": [],
            "id": "sg-0f43972ff10a301b8",
            "ingress": [],
            "name": "private_sg-20230813155428120700000002",
            "name_prefix": "private_sg-",
            "owner_id": "067267145404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private_sg",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "private_sg",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0521a9be9b7c694ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-566502567",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f43972ff10a301b8",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-876287424",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f43972ff10a301b8",
            "security_group_rule_id": "sgr-030b1d0f42638d2d5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1202465662",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f43972ff10a301b8",
            "security_group_rule_id": "sgr-0d42dc962f8f0876b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067267145404:security-group/sg-0d6ca18fd3ab6c7a1",
            "description": "Security Group with SSH port open for everybody(IPv4 CIDR), egress ports are all world open",
            "egress": [],
            "id": "sg-0d6ca18fd3ab6c7a1",
            "ingress": [],
            "name": "public-bastion-sg-20230813155428134500000003",
            "name_prefix": "public-bastion-sg-",
            "owner_id": "067267145404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-bastion-sg",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "public-bastion-sg",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0521a9be9b7c694ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2018156275",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d6ca18fd3ab6c7a1",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-92429547",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d6ca18fd3ab6c7a1",
            "security_group_rule_id": "sgr-00bc4a4bb83d5502d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067267145404:network-acl/acl-07d032754a70f3d05",
            "default_network_acl_id": "acl-07d032754a70f3d05",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07d032754a70f3d05",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "067267145404",
            "subnet_ids": [
              "subnet-005d615cc612367ae",
              "subnet-026af763a1322777e",
              "subnet-0837a7b945ace3648",
              "subnet-09a7d1f18449f7e99",
              "subnet-0b19df22e36f20afb",
              "subnet-0b5b79584b941bdae"
            ],
            "tags": {
              "Name": "SRE-DevOps-stag-myvpc-default",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "SRE-DevOps-stag-myvpc-default",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "vpc_id": "vpc-0521a9be9b7c694ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067267145404:route-table/rtb-0497e5354d9e9607a",
            "default_route_table_id": "rtb-0497e5354d9e9607a",
            "id": "rtb-0497e5354d9e9607a",
            "owner_id": "067267145404",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "SRE-DevOps-stag-myvpc-default",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "SRE-DevOps-stag-myvpc-default",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0521a9be9b7c694ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067267145404:security-group/sg-065e6ffc366e6a044",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-065e6ffc366e6a044",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "067267145404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SRE-DevOps-stag-myvpc-default",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "SRE-DevOps-stag-myvpc-default",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "vpc_id": "vpc-0521a9be9b7c694ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a87c1a2fee88ec09",
            "domain": "vpc",
            "id": "eipalloc-0a87c1a2fee88ec09",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-214-101-192.compute-1.amazonaws.com",
            "public_ip": "18.214.101.192",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SRE-DevOps-stag-myvpc-us-east-1a",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "SRE-DevOps-stag-myvpc-us-east-1a",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067267145404:internet-gateway/igw-01ad11c8cbab6904d",
            "id": "igw-01ad11c8cbab6904d",
            "owner_id": "067267145404",
            "tags": {
              "Name": "SRE-DevOps-stag-myvpc",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "SRE-DevOps-stag-myvpc",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "vpc_id": "vpc-0521a9be9b7c694ac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a87c1a2fee88ec09",
            "association_id": "eipassoc-0e1ac338a7bfd0dd5",
            "connectivity_type": "public",
            "id": "nat-04344fa8cfe759372",
            "network_interface_id": "eni-0e7cc72ee764eee67",
            "private_ip": "10.0.1.109",
            "public_ip": "18.214.101.192",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-005d615cc612367ae",
            "tags": {
              "Name": "SRE-DevOps-stag-myvpc-us-east-1a",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "SRE-DevOps-stag-myvpc-us-east-1a",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b29cbfaeb2e918b31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04344fa8cfe759372",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b29cbfaeb2e918b3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01ad11c8cbab6904d",
            "id": "r-rtb-0fe36b19529815d111080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fe36b19529815d11",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067267145404:route-table/rtb-0b29cbfaeb2e918b3",
            "id": "rtb-0b29cbfaeb2e918b3",
            "owner_id": "067267145404",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SRE-DevOps-stag-myvpc-private",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "SRE-DevOps-stag-myvpc-private",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0521a9be9b7c694ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067267145404:route-table/rtb-0fe36b19529815d11",
            "id": "rtb-0fe36b19529815d11",
            "owner_id": "067267145404",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SRE-DevOps-stag-myvpc-public",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "SRE-DevOps-stag-myvpc-public",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0521a9be9b7c694ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05179c3a746a8c203",
            "route_table_id": "rtb-0b29cbfaeb2e918b3",
            "subnet_id": "subnet-026af763a1322777e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d34c4d95b7095cc7",
            "route_table_id": "rtb-0b29cbfaeb2e918b3",
            "subnet_id": "subnet-0b5b79584b941bdae"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c25a9cc7958ff39",
            "route_table_id": "rtb-0b29cbfaeb2e918b3",
            "subnet_id": "subnet-0837a7b945ace3648"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08601ecd666aa8e01",
            "route_table_id": "rtb-0b29cbfaeb2e918b3",
            "subnet_id": "subnet-09a7d1f18449f7e99"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00cf92daf26980c9e",
            "route_table_id": "rtb-0fe36b19529815d11",
            "subnet_id": "subnet-005d615cc612367ae"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040dc4b295b2290a6",
            "route_table_id": "rtb-0fe36b19529815d11",
            "subnet_id": "subnet-0b19df22e36f20afb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067267145404:subnet/subnet-026af763a1322777e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026af763a1322777e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "067267145404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SRE-DevOps-stag-myvpc-db-us-east-1a",
              "Type": "Private Database Subnets",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "SRE-DevOps-stag-myvpc-db-us-east-1a",
              "Type": "Private Database Subnets",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "vpc_id": "vpc-0521a9be9b7c694ac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067267145404:subnet/subnet-0b5b79584b941bdae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5b79584b941bdae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "067267145404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SRE-DevOps-stag-myvpc-db-us-east-1b",
              "Type": "Private Database Subnets",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "SRE-DevOps-stag-myvpc-db-us-east-1b",
              "Type": "Private Database Subnets",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "vpc_id": "vpc-0521a9be9b7c694ac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067267145404:subnet/subnet-0837a7b945ace3648",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0837a7b945ace3648",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "067267145404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SRE-DevOps-stag-myvpc-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "SRE-DevOps-stag-myvpc-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "vpc_id": "vpc-0521a9be9b7c694ac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067267145404:subnet/subnet-09a7d1f18449f7e99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a7d1f18449f7e99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "067267145404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SRE-DevOps-stag-myvpc-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "SRE-DevOps-stag-myvpc-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "vpc_id": "vpc-0521a9be9b7c694ac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067267145404:subnet/subnet-005d615cc612367ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005d615cc612367ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "067267145404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SRE-DevOps-stag-myvpc-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "SRE-DevOps-stag-myvpc-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "vpc_id": "vpc-0521a9be9b7c694ac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067267145404:subnet/subnet-0b19df22e36f20afb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b19df22e36f20afb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "067267145404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SRE-DevOps-stag-myvpc-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "SRE-DevOps-stag-myvpc-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "vpc_id": "vpc-0521a9be9b7c694ac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067267145404:vpc/vpc-0521a9be9b7c694ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07d032754a70f3d05",
            "default_route_table_id": "rtb-0497e5354d9e9607a",
            "default_security_group_id": "sg-065e6ffc366e6a044",
            "dhcp_options_id": "dopt-005db6fe69051b5f0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0521a9be9b7c694ac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0497e5354d9e9607a",
            "owner_id": "067267145404",
            "tags": {
              "Name": "SRE-DevOps-stag-myvpc",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            },
            "tags_all": {
              "Name": "SRE-DevOps-stag-myvpc",
              "environment": "stag",
              "name": "SRE-DevOps-stag",
              "owners": "SRE-DevOps"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}